<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Body_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="408dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/Sign_Up"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/body_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:fontFamily="montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Body_text2" />

    <ImageView
        android:id="@+id/WhiteBox"
        android:layout_width="303dp"
        android:layout_height="369dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/white_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Body"
        app:layout_constraintVertical_bias="0.269" />

    <Button
        android:id="@+id/Sign_Up"
        android:layout_width="243dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorButtonBackground"
        android:onClick="SecondScreen"
        android:text="@string/Sign_Up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:fontFamily="montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBox"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordrequirements"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/passwordrequirements"
        android:layout_width="242dp"
        android:layout_height="36dp"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/password_help"
        android:textColor="@color/colorPasswordtext"
        android:textSize="12sp"
        app:fontFamily="montserrat"
        app:layout_constraintBottom_toBottomOf="@+id/WhiteBox"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toBottomOf="@+id/password_validation" />

    <TextView
        android:id="@+id/orusegoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Google_plus"
        android:textColor="@color/colorPasswordtext"
        app:layout_constraintBottom_toBottomOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toTopOf="@+id/google_button" />

    <EditText
        android:id="@+id/email"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPasswordline"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toTopOf="@+id/WhiteBox" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toTopOf="@+id/WhiteBox"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPasswordtext">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_validation"
        android:layout_width="254dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordrequirements"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.142"
        app:passwordToggleDrawable="@drawable/icon_selector"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPasswordtext">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verify_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/Sign_Up"
        app:layout_constraintEnd_toEndOf="@+id/WhiteBox"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="@+id/WhiteBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordrequirements"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>
